Add record scratch samples

--- a/config.json
+++ b/config.json
@@ -3,13 +3,15 @@
     "bpm":140,
     "pattern": [],
     "fill1": ["rimshot-2.wav", 1],
-    "fill2": ["kick-1.wav", 4],
+    "fill2": ["hihat-1.wav", 1],
     "tap_banks": [
         [
             "rimshot-1.wav",
             "rimshot-2.wav",
             "kick-1.wav",
-            "hihat-1.wav"
+            "hihat-1.wav",
+            "beat_up.wav",
+            "beat_down.wav"
         ],
         [
             "d-.wav",
