Add lower pitched beat scratches

--- a/config.json
+++ b/config.json
@@ -8,6 +8,8 @@
         [
             "beat_up.wav",
             "beat_down.wav",
+            "beat_up_2.wav",
+            "beat_down_2.wav",
             "rimshot-low.wav",
             "rimshot-2.wav",
             "kick-1.wav",
